[gd_scene load_steps=9 format=3 uid="uid://be5jppitskypi"]

[ext_resource type="Script" uid="uid://rxdol2sp6ya7" path="res://scripts/pickable_item.gd" id="1_f1bw5"]
[ext_resource type="Texture2D" uid="uid://bdcwnokmcpqt2" path="res://Assets/sprites/fruit.png" id="1_rgmro"]
[ext_resource type="FontFile" uid="uid://cmav3nbk7j58m" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="2_f1bw5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dlykn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_esydh"]
atlas = ExtResource("1_rgmro")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2uij"]
atlas = ExtResource("1_rgmro")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnbe8"]
atlas = ExtResource("1_rgmro")
region = Rect2(32, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_y0ydc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_esydh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2uij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnbe8")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[node name="PickableItem" type="Area2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource("1_f1bw5")

[node name="ItemColli" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dlykn")

[node name="ItemSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_y0ydc")
autoplay = "default"

[node name="ItemLabel" type="Label" parent="."]
offset_left = -98.0
offset_top = -52.0
offset_right = 115.0
offset_bottom = -28.0
theme_override_fonts/font = ExtResource("2_f1bw5")
theme_override_font_sizes/font_size = 24
text = "[PRESS E ]"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
